// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ICSS postcss plugin basic: css 1`] = `
":import() {
}

.foo {
  color: red;
}

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

:export() {
  foo: bar
}
"
`;

exports[`ICSS postcss plugin basic: messages 1`] = `
Array [
  Object {
    "plugin": "postcss-css-loader-icss",
    "tokens": Object {
      "duplicate.css": Object {
        "bar": "foo",
        "color": "green",
        "foo": "bar",
      },
      "http://example.com/other-style.css": Object {
        "{media}": "screen and print",
      },
      "http://example.com/style.css": Object {},
      "other-test.css": Object {
        "key": "value",
        "other-key": "other-value",
      },
      "test-media.css": Object {
        "{media}": "screen and print",
      },
      "test.css": Object {},
    },
    "type": "import",
  },
  Object {
    "plugin": "postcss-css-loader-icss",
    "tokens": Object {
      "bar": "foo",
      "foo": "bar",
    },
    "type": "export",
  },
]
`;

exports[`ICSS postcss plugin only export messages: css 1`] = `
"
"
`;

exports[`ICSS postcss plugin only export messages: messages 1`] = `
Array [
  Object {
    "plugin": "postcss-css-loader-icss",
    "tokens": Object {
      "foo": "bar",
    },
    "type": "export",
  },
]
`;

exports[`ICSS postcss plugin only import messages: css 1`] = `
"
"
`;

exports[`ICSS postcss plugin only import messages: messages 1`] = `
Array [
  Object {
    "plugin": "postcss-css-loader-icss",
    "tokens": Object {
      "img.png": Object {
        "__url_0": "default",
      },
    },
    "type": "import",
  },
]
`;
